--- a/index.html
+++ b/index.html
@@ -555,16 +555,35 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 17 Поза отдыха героя -->
         <li>
-          <h3>Поза отдыха героя</h3>
-          <p>
-            Сядь на землю между своих ступней, помогая руками, опусти свое туловище на землю. Забрось свои руки за
-            голову и так оставайся. Эта поза устраняет болезни в суставах, а также плечах. Она известна как поза отдыха
-            героя.
-          </p>
-          <img src="./images/heroRest.png" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/herorest17.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза отдыха героя</h3>
+              <p class="asana-desc">
+                Сядь на землю между своих ступней, помогая руками, опусти свое туловище на землю. Забрось свои руки за
+                голову и так оставайся. Эта поза устраняет болезни в суставах, а также плечах. Она известна как поза
+                отдыха героя.
+              </p>
+              <img class="img-desc" src="./images/heroRest.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
+
         <li>
           <h3>Поза палки</h3>
           <p>
