--- a/index.html
+++ b/index.html
@@ -583,26 +583,93 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 18 Поза палки -->
         <li>
-          <h3>Поза палки</h3>
-          <p>
-            Поза палки. Положи свое прямое тело на прекрасную подстилку на живот. Расположи ладони рук под плечами.
-            Подними свое прямое тело на прямых руках, как если бы тело было прямое как палка. Делай эту позу и ты
-            мобилизуешь свое сознание. Если чувствуешь, что с трудом контролируешь себя, это позой не дашь гневу
-            вырваться наружу. Эта поза дает ясность сознанию. Все болезни рук она лечит.
-          </p>
-          <img src="./images/palka.png" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/palka18.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза палки</h3>
+              <p class="asana-desc">
+                Поза палки. Положи свое прямое тело на прекрасную подстилку на живот. Расположи ладони рук под плечами.
+                Подними свое прямое тело на прямых руках, как если бы тело было прямое как палка. Делай эту позу и ты
+                мобилизуешь свое сознание. Если чувствуешь, что с трудом контролируешь себя, это позой не дашь гневу
+                вырваться наружу. Эта поза дает ясность сознанию. Все болезни рук она лечит.
+              </p>
+              <img class="img-desc" src="./images/palka.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
+
+        <!-- 19 Поза собаки -->
         <li>
-          <h3>Поза собаки</h3>
-          <p>
-            Сделай все также, как в позе палки. А затем согнись в пояснице таким образом, чтобы ноги были прямыми. Руки,
-            голову, туловище выровняй в одну линию. Это поза собаки. Делай ее и получишь чистоту каналов в руках, ногах
-            и пояснице. Кровь вместе с праной омоет твои руки, туловище и голову. Этим обновишь кровь в ногах своих.
-            Выносливость обретается этой позой. Ею уравновесишь баланс крови и энергии в организме.
-          </p>
-          <img src="./images/sobaka.png" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/dog19.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза собаки</h3>
+              <p class="asana-desc">
+                Сделай все также, как в позе палки. А затем согнись в пояснице таким образом, чтобы ноги были прямыми.
+                Руки, голову, туловище выровняй в одну линию. Это поза собаки. Делай ее и получишь чистоту каналов в
+                руках, ногах и пояснице. Кровь вместе с праной омоет твои руки, туловище и голову. Этим обновишь кровь в
+                ногах своих. Выносливость обретается этой позой. Ею уравновесишь баланс крови и энергии в организме.
+              </p>
+              <img class="img-desc" src="./images/sobaka.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
+        </li>
+
+        <!-- 20  Скрученная стойка на руках-->
+        <li>
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/frog20.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Скрученная стойка на руках</h3>
+              <p class="asana-desc">
+                Обопрись на ладони рук и пальцы ног. Согни руки в локтях и помести локти рук поверх локтей так, чтобы
+                колени ног упирались в локти. Затем, сохраняя бдительность, оторвите пальцы ног от земли, опираясь
+                только на ладони рук. Эта поза известна как скрученная стойка на руках. Она развивает мышцы живота.
+              </p>
+              <img class="img-desc" src="./images/frog.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
         <li>
           <h3>Скрученная стойка на руках</h3>
