--- a/index.html
+++ b/index.html
@@ -671,27 +671,40 @@
             </fieldset>
           </form>
         </li>
+        <!-- 21  Поза павлина – маюрасана-->
+
         <li>
-          <h3>Скрученная стойка на руках</h3>
-          <p>
-            Обопрись на ладони рук и пальцы ног. Согни руки в локтях и помести локти рук поверх локтей так, чтобы колени
-            ног упирались в локти. Затем, сохраняя бдительность, оторвите пальцы ног от земли, опираясь только на ладони
-            рук. Эта поза известна как скрученная стойка на руках. Она развивает мышцы живота.
-          </p>
-          <img src="./images/frog.png" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/mayurasana.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза павлина – маюрасана</h3>
+              <p class="asana-desc">
+                Стань на колени, наклонись вперед. Поставь руки на землю, чтобы ладони смотрели в сторону ног. Сведи оба
+                локтя вместе и упрись ими в область пупка. При этом голова должна упираться в землю. Выпрями ноги,
+                оторви голову от земли так, чтобы упор был на ладони и пальцы ног. Оставайся та, пока не потечет
+                энергия. Затем, подайся вперед и оторви пальцы ног, чтобы туловище и ноги были параллельны земле, а все
+                туловище держалось на ладонях. Эта поза называется поза павлина – маюрасана. Тот, кто практикует эту
+                асану, имеет сильный пищеварительный огонь, который переваривает все яды. Эта поза устраняет все болезни
+                живота.
+              </p>
+              <img class="img-desc" src="./images/mayurasana.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
-        <li>
-          <h3>Поза павлина – маюрасана</h3>
-          <p>
-            Стань на колени, наклонись вперед. Поставь руки на землю, чтобы ладони смотрели в сторону ног. Сведи оба
-            локтя вместе и упрись ими в область пупка. При этом голова должна упираться в землю. Выпрями ноги, оторви
-            голову от земли так, чтобы упор был на ладони и пальцы ног. Оставайся та, пока не потечет энергия. Затем,
-            подайся вперед и оторви пальцы ног, чтобы туловище и ноги были параллельны земле, а все туловище держалось
-            на ладонях. Эта поза называется поза павлина – маюрасана. Тот, кто практикует эту асану, имеет сильный
-            пищеварительный огонь, который переваривает все яды. Эта поза устраняет все болезни живота.
-          </p>
-          <img src="" />
-        </li>
+
         <li>
           <h3>Трехугольная поза</h3>
           <p>
