--- a/index.html
+++ b/index.html
@@ -705,17 +705,38 @@
           </form>
         </li>
 
+        <!-- 22 Трехугольная поза-->
         <li>
-          <h3>Трехугольная поза</h3>
-          <p>
-            А теперь я изложу трехугольную позу. Стань прямо, раздвинь ноги на ширине плеч, спину, шею, голову держи на
-            одной линии. Со вдохом подними руки и держи их параллельно земли, чтобы они составляли прямую линию. С
-            выдохом же наклонись вправо и дотронься правой рукой левой или правой ступни. Пусть при этом взор твой будет
-            обращен на левую руку. Руки старайся держать на прямой линии. Затем сделай то же упражнение в другую
-            сторону. Эта асана позволит устранить боли в позвоночнике. Она также меняет солнечные и лунные токи.
-          </p>
-          <img src="" />
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/threeangle22.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Трехугольная поза</h3>
+              <p class="asana-desc">
+                А теперь я изложу трехугольную позу. Стань прямо, раздвинь ноги на ширине плеч, спину, шею, голову держи
+                на одной линии. Со вдохом подними руки и держи их параллельно земли, чтобы они составляли прямую линию.
+                С выдохом же наклонись вправо и дотронься правой рукой левой или правой ступни. Пусть при этом взор твой
+                будет обращен на левую руку. Руки старайся держать на прямой линии. Затем сделай то же упражнение в
+                другую сторону. Эта асана позволит устранить боли в позвоночнике. Она также меняет солнечные и лунные
+                токи.
+              </p>
+              <img class="img-desc" src="./images/threeangle.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
         </li>
+
         <li>
           <h3>Поза саранчи</h3>
           <p>
