--- a/index.html
+++ b/index.html
@@ -821,14 +821,18 @@
             </fieldset>
           </form>
         </li>
+        <!-- 26 Наклон к одной ноге -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/nalonknoge26.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Наклон к одной ноге</h3>
+              <p class="asana-desc">
+                Сядь на землю с прямыми ногами. Согни колено и упри его во внутреннюю часть бедра другой ноги. Наклонись
+                вперед. Захвати ладонями прямую ногу.
+              </p>
+              <img class="img-desc" src="./images/naklon26.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -844,15 +848,19 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 27 Поза растянутого бока -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/stretchSide27.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза растянутого бока</h3>
+              <p class="asana-desc">
+                Сядь на землю с прямыми ногами. Согните одну ногу в колене, другую ногу отведи в сторону. Наклони
+                туловище в одну сторону так, чтобы один бок был растянут, а другой сжат. Можешь захватить ступню прямой
+                ноги ладонью. Эта поза растянутого бока. Она дает гибкость и контроль над ребрами.
+              </p>
+              <img class="img-desc" src="./images/bock.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -868,14 +876,18 @@
             </fieldset>
           </form>
         </li>
+        <!-- 28 Шпагат с наклоном -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/shpagat28.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Шпагат с наклоном</h3>
+              <p class="asana-desc">
+                Сядь на землю с прямыми ногами. Расставь прямые ноги как можно шире. Наклонись вперед и захвати ладонями
+                рук прямые ноги.
+              </p>
+              <img class="img-desc" src="./images/28.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -891,15 +903,18 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 29 Палка наоборот -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/palka29.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Палка наоборот</h3>
+              <p class="asana-desc">
+                Сядь на землю с прямыми ногами. Упрись ладонями рук за спиной. Прогни свое тело вверх так, чтобы
+                упирался на ладони рук и ступни. Пусть колени будут прямыми. Так оставайся долго.
+              </p>
+              <img class="img-desc" src="./images/palkaBack.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
