--- a/index.html
+++ b/index.html
@@ -930,15 +930,18 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 30 Поза воина (Вирабхадрасана) звук не оброблений-->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/vira30.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза воина (Вирабхадрасана)</h3>
+              <p class="asana-desc">
+                Встань так, чтобы одна нога была согнута в колене, а другая прямая. Подними руки над головой и соедини
+                ладони вместе.
+              </p>
+              <img class="img-desc" src="./images/hero.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -954,15 +957,18 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 31 Поза равновесия  -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/ravnovesie31.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза равновесия</h3>
+              <p class="asana-desc">
+                Сядь на землю, затем приподними ровные ноги и захвати их руками. Так удерживай равновесие и оставайся
+                долго. Эта поза равновесия.
+              </p>
+              <img class="img-desc" src="./images/balance.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -978,15 +984,18 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 32 Утканаасана -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/utka32.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Уткатанасана</h3>
+              <p class="asana-desc">
+                Стань прямо, соедини руки надо головой. Согни ноги в коленях так, чтобы туловище и руки были на одной
+                прямой.
+              </p>
+              <img class="img-desc" src="./images/utka.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1002,15 +1011,18 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 33 Наклон 90 градусов -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/naklon33.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Наклон 90 градусов</h3>
+              <p class="asana-desc">
+                Стань прямо, сгибайся в пояснице так, чтобы ноги в коленях были прямыми, а вытянутые руки и туловище
+                были параллельны земле. Оставайся в этой позе долго.
+              </p>
+              <img class="img-desc" src="./images/ugol90.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
