--- a/index.html
+++ b/index.html
@@ -1038,15 +1038,18 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 34 Поза двойного угла -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/twoAngle34.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза двойного угла</h3>
+              <p class="asana-desc">
+                Стань прямо, соедини руки за спиной. Сгибайся так, чтобы ноги в коленях и руки в локтях оставались
+                прямыми. Поднимай локти как можно выше. Эта поза двойного угла.
+              </p>
+              <img class="img-desc" src="./images/2angle.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1062,15 +1065,19 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 35 Поза танцующего Шивы -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/dansingShiva35.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза танцующего Шивы</h3>
+              <p class="asana-desc">
+                Стань прямо на одной ноге. Другую ногу согни назад в колене и захвати ее ладонью руки. Другую руку
+                подними вперед и вверх. Подними согнутую ногу как можно выше, помогая себе руками. Так оставайся долго.
+                Это поза танцующего Шивы.
+              </p>
+              <img class="img-desc" src="./images/danceShiva.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1086,15 +1093,20 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 36 Поза брахмачарья асана -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/brahmachary36.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза брахмачарья асана</h3>
+              <p class="asana-desc">
+                Сядь с выпрямленными ногами на землю, чтобы туловище, шея, голова были на одной прямой. Обопрись руками
+                о землю и приподними свое тело, чтобы опирался только на ладони рук и пятки ног. Тот, кто выполняет эту
+                позу, обретает многие положительные качества других поз. Поэтому, следует ее практиковать с усердием.
+                Это поза брахмачарья асана.
+              </p>
+              <img class="img-desc" src="./images/braxmachari.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1110,15 +1122,19 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 37 Ваджрасана (поза алмаза) -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/vadjrasana37.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Ваджрасана (поза алмаза)</h3>
+              <p class="asana-desc">
+                В уединенном месте сядь на согнутые колени. Спина, шея, голова пусть будут на одной линии. Руки положи
+                на колени. Взор устреми пере собой. Этим упражнением приобретается прочность алмаза, поэтому и асана
+                называется поза алмаза.
+              </p>
+              <img class="img-desc" src="./images/almaz.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1134,15 +1150,18 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 38 Поза сукхасана -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/sukhasana38.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза сукхасана</h3>
+              <p class="asana-desc">
+                Сидя на земле, помести левую или правую ступню соответственно на правое или левое бедро. Спину, шею,
+                голову держи прямо. Это поза сукхасана.
+              </p>
+              <img class="img-desc" src="./images/sukhasana.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1158,15 +1177,20 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 39 Поза лотоса – падмасана -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/padmaasana39.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза лотоса – падмасана</h3>
+              <p class="asana-desc">
+                Сидя на земле, поместите левую ступню на правое бедро, а правую ступню на левое бедро. Либо помести
+                правую ступню на левое бедро, а левую ступню на правое бедро таким образом, чтобы ноги были сплетены.
+                Выпрями спину, шею, голову. Поза называется поза лотоса – падмасана. Это непревзойденная асана, идеальна
+                для пранаямы и медитации.
+              </p>
+              <img class="img-desc" src="./images/lotos.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1182,15 +1206,18 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 40 Поза бхадрасана -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/bhadraasana40.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза бхадрасана</h3>
+              <p class="asana-desc">
+                Сядь на землю. Соедини ступни обеих ног и притяни их как можно ближе к туловищу. Это бхадрасана, дающая
+                многие совершенства и управляющая сексуальной энергией.
+              </p>
+              <img class="img-desc" src="./images/bhadrasana.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1206,15 +1233,19 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 41 Поза рыбы – матьясана -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/matyaasana41.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза рыбы – матьясана</h3>
+              <p class="asana-desc">
+                Сядь в позу лотоса на землю. Затем ляг на спину, помести ладони обеих рук под голову – это поза рыбы –
+                матьясана. Тот, кто в совершенстве овладел этой асаной, чувствует себя как в воде. И может долго
+                перебывать в этой позе.
+              </p>
+              <img class="img-desc" src="./images/riba.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
