--- a/index.html
+++ b/index.html
@@ -1261,15 +1261,18 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 42 Удиянабандха асана -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/udiyana42.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Удиянабандха асана</h3>
+              <p class="asana-desc">
+                Стань прямо, сделай глубокий выдох. Упрись ладонями в коленки полусогнутых ног. Втягивай стенки живота
+                на выдохе как можно выше.
+              </p>
+              <img class="img-desc" src="./images/udiyana.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1285,15 +1288,18 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 43 Поза - сон Будды -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/sonBuddu43.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза - сон Будды</h3>
+              <p class="asana-desc">
+                Ляг на землю. Забрось согнутые ноги за голову так, чтобы голова оказалась между ног. Эта поза именуется
+                как сон Будды. Практикуя ее, йогин может мгновенно заснуть. Сон в этой позе приносит многие блага.
+              </p>
+              <img class="img-desc" src="./images/son.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1309,15 +1315,23 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 44 Поза победителя -->
         <li>
           <form name="" id="">
-            <audio id="" name="" src="./audio"></audio>
+            <audio id="" name="" src="./audio/audacity/victory44.mp3"></audio>
             <fieldset class="fieldDescription">
               <legend class="legend">Description</legend>
-              <h3 class="title-desc"></h3>
-              <p class="asana-desc"></p>
-              <img class="img-desc" src="./images" alt="" />
+              <h3 class="title-desc">Поза победителя</h3>
+              <p class="asana-desc">
+                Ляг на спину, притяни ноги, согнутые в коленях. Пропусти руки между ног и захвати ступни ног ладонями
+                рук. Можешь переместить ступни и ладони как можно дальше за голову и коснуться ими земли. Это одна из
+                важнейших поз для обретения власти над сексуальной энергией. Тот, кто владеет этой позой, полностью
+                контролирует апану. Сон в той позе совершают многие сиддхи. Когда чувствуешь расстройство внутри тела от
+                переутомления – практикуй ее. Все болезни кишечника и внутренних органов излечиваются этой позой. Тот,
+                кто практикует ее излечивает болезни и обретает ясность сознания. Йогин, выполняющий эту позу
+                отключается от всех внешних воздействий. Это поза победителя.
+              </p>
+              <img class="img-desc" src="./images/pobeditel.png" alt="" />
             </fieldset>
             <fieldset class="time-field">
               <legend class="legend">asana performens time</legend>
@@ -1333,7 +1347,34 @@
             </fieldset>
           </form>
         </li>
-
+        <!-- 45 Поза крокодила -->
+        <li>
+          <form name="" id="">
+            <audio id="" name="" src="./audio/audacity/crocodil45.mp3"></audio>
+            <fieldset class="fieldDescription">
+              <legend class="legend">Description</legend>
+              <h3 class="title-desc">Поза крокодила</h3>
+              <p class="asana-desc">
+                Положи на живот свое прямое тело. Помести голову на ладони рук. Так пребывай в этой позе, позе
+                крокодила. Она дает отдых телу и разуму.
+              </p>
+              <img class="img-desc" src="./images/krokodil.png" alt="" />
+            </fieldset>
+            <fieldset class="time-field">
+              <legend class="legend">asana performens time</legend>
+              <label class="time-label" for="">
+                asana minutes:
+                <input class="time-input" type="number" name="time" id="" min="1" max="90" step="1" value="1" />
+              </label>
+              <label class="time-label" for="">
+                break minutes:
+                <input class="time-input" type="number" name="timeBreake" id="" min="1" max="10" step="1" value="1" />
+              </label>
+              <button class="btn-add" type="submit">add to practice</button>
+            </fieldset>
+          </form>
+        </li>
+        <!-- 45  -->
         <li>
           <form name="" id="">
             <audio id="" name="" src="./audio/audacity/shavasana46.mp3"></audio>
