--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1 class="main-title">Hatha Yoga</h1>
       <h2 class="subtitle">All asanas</h2>
 
-      <a href="#bottom">в кінець</a>
+      <!-- <a href="#bottom">в кінець</a> -->
       <ol class="js-asanas" id="exerciseList">
         <!--1 початок практики -->
         <li>
@@ -1409,7 +1409,12 @@
           </form>
         </li>
       </ol>
-      <a href="#top" id="bottom">на початок</a>
+      <div class="scroll-links">
+        <a href="#top">⬆️ На початок</a>
+        <a href="#bottom">⬇️ В кінець</a>
+      </div>
+      <div id="bottom"></div>
+      <!-- <a href="#top" id="bottom">на початок</a> -->
     </section>
     <script src="./script.js"></script>
   </body>
